--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.1",
+    "knex": "^2.3.0",
     "next": "12.3.1",
+    "next-connect": "^0.13.0",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0",
