--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "testapis": "jest ./__test__/apis --watch --runInBand",
+    "test": "jest --watch --runInBand"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
@@ -47,6 +48,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "msw": "^0.49.0",
+    "node-mocks-http": "^1.12.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "ts-jest": "^29.0.3",
